#ifndef _GPGFX_UI_LAYOUTS_H_
#define _GPGFX_UI_LAYOUTS_H_

#include <map>
#include <vector>
#include "config.pb.h"

typedef enum {
    GP_ELEMENT_WIDGET,
    GP_ELEMENT_SCREEN,
    GP_ELEMENT_BUTTON,
    GP_ELEMENT_DIR_BUTTON,
    GP_ELEMENT_LEFT_LAYOUT,
    GP_ELEMENT_RIGHT_LAYOUT,
    GP_ELEMENT_LEVER,
    GP_ELEMENT_LABEL,
    GP_ELEMENT_SPRITE
} GPElement;

enum {
    GP_BUTTON_ELLIPSE,
    GP_BUTTON_SQUARE,
    GP_BUTTON_DIAMOND,
    GP_BUTTON_POLYGON,
} GPButton_Shape;

#define GPELEMENT_PARAM_COUNT 8

typedef struct {
    GPElement elementType;
    uint16_t parameters[GPELEMENT_PARAM_COUNT];
} GPButtonLayout;

const std::map<const uint16_t,const std::vector<GPButtonLayout>> GPButtonLayouts_AllLayouts = {
    // levers
    // parameters: x, y, radiusX/width, radiusY/height, stroke, fill, DpadMode
    {BUTTON_LAYOUT_STICK,            {{GP_ELEMENT_LEVER, {17, 37, 10, 10, 1, 0, 0}}}},
    {BUTTON_LAYOUT_TWINSTICKA,       {{GP_ELEMENT_LEVER, {17, 37, 10, 10, 1, 0, 0}}}},
    {BUTTON_LAYOUT_VLXA,             {{GP_ELEMENT_LEVER, {15, 36,  8,  8, 1, 0, 0}}}},
    {BUTTON_LAYOUT_FIGHTBOARD_STICK, {{GP_ELEMENT_LEVER, {27, 31, 10, 10, 1, 0, 0}}}},

    // buttons
    // parameters: x, y, radiusX/width, radiusY/height, stroke, fill, Gamepad button mask, shape
    {BUTTON_LAYOUT_STICKLESS, {
        {GP_ELEMENT_DIR_BUTTON, {8,  20, 8, 8, 1, 0, GAMEPAD_MASK_LEFT,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {26, 20, 8, 8, 1, 0, GAMEPAD_MASK_DOWN,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {41, 29, 8, 8, 1, 0, GAMEPAD_MASK_RIGHT,   GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {48, 53, 8, 8, 1, 0, GAMEPAD_MASK_UP,      GP_BUTTON_ELLIPSE}}
    }},
    {BUTTON_LAYOUT_BUTTONS_ANGLED, {
        {GP_ELEMENT_DIR_BUTTON, {8,  36, 7, 7, 1, 0, GAMEPAD_MASK_LEFT,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {25, 42, 7, 7, 1, 0, GAMEPAD_MASK_DOWN,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {33, 25, 7, 7, 1, 0, GAMEPAD_MASK_UP,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {42, 49, 7, 7, 1, 0, GAMEPAD_MASK_RIGHT,   GP_BUTTON_ELLIPSE}}
    }},
    {BUTTON_LAYOUT_BUTTONS_BASIC, {
        {GP_ELEMENT_DIR_BUTTON, {8,  37, 7, 7, 1, 0, GAMEPAD_MASK_LEFT,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {23, 24, 7, 7, 1, 0, GAMEPAD_MASK_UP,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {23, 50, 7, 7, 1, 0, GAMEPAD_MASK_DOWN,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {37, 37, 7, 7, 1, 0, GAMEPAD_MASK_RIGHT,   GP_BUTTON_ELLIPSE}}
    }},
    {BUTTON_LAYOUT_KEYBOARD_ANGLED, {
        {GP_ELEMENT_DIR_BUTTON, {8,  37, 7, 7, 1, 0, GAMEPAD_MASK_LEFT,    GP_BUTTON_DIAMOND}},
        {GP_ELEMENT_DIR_BUTTON, {23, 24, 7, 7, 1, 0, GAMEPAD_MASK_UP,      GP_BUTTON_DIAMOND}},
        {GP_ELEMENT_DIR_BUTTON, {23, 50, 7, 7, 1, 0, GAMEPAD_MASK_DOWN,    GP_BUTTON_DIAMOND}},
        {GP_ELEMENT_DIR_BUTTON, {37, 37, 7, 7, 1, 0, GAMEPAD_MASK_RIGHT,   GP_BUTTON_DIAMOND}}
    }},
    {BUTTON_LAYOUT_KEYBOARDA, {
        {GP_ELEMENT_DIR_BUTTON, {8,  39, 18, 49, 1, 0, GAMEPAD_MASK_LEFT,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {19, 39, 29, 49, 1, 0, GAMEPAD_MASK_DOWN,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {19, 28, 29, 38, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {30, 39, 40, 49, 1, 0, GAMEPAD_MASK_RIGHT, GP_BUTTON_SQUARE}}
    }},
    {BUTTON_LAYOUT_DANCEPADA, {
        {GP_ELEMENT_DIR_BUTTON, {39, 29, 54, 44, 1, 0, GAMEPAD_MASK_LEFT,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {56, 46, 71, 61, 1, 0, GAMEPAD_MASK_DOWN,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {56, 12, 71, 27, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {73, 29, 88, 44, 1, 0, GAMEPAD_MASK_RIGHT, GP_BUTTON_SQUARE}}
    }},
    {BUTTON_LAYOUT_BLANKA, {}},
    {BUTTON_LAYOUT_FIGHTBOARD_MIRRORED, {
        {GP_ELEMENT_BUTTON,     {9,  18, 7, 7, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {25, 18, 7, 7, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {41, 18, 7, 7, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {57, 27, 7, 7, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {9,  34, 7, 7, 1, 0, GAMEPAD_MASK_L2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {25, 34, 7, 7, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {41, 34, 7, 7, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {57, 42, 7, 7, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {8,  46, 3, 3, 1, 0, GAMEPAD_MASK_L3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {17, 46, 3, 3, 1, 0, GAMEPAD_MASK_S1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {26, 46, 3, 3, 1, 0, GAMEPAD_MASK_A1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {34, 46, 3, 3, 1, 0, GAMEPAD_MASK_S2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {44, 46, 3, 3, 1, 0, GAMEPAD_MASK_R3,      GP_BUTTON_ELLIPSE}},
    }},
    {BUTTON_LAYOUT_CUSTOMA, {{GP_ELEMENT_LEFT_LAYOUT}}},
    {BUTTON_LAYOUT_OPENCORE0WASDA, {
        {GP_ELEMENT_DIR_BUTTON, {16, 39, 26, 49, 1, 0, GAMEPAD_MASK_LEFT,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {27, 39, 37, 49, 1, 0, GAMEPAD_MASK_DOWN,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {27, 28, 37, 38, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_DIR_BUTTON, {38, 39, 48, 49, 1, 0, GAMEPAD_MASK_RIGHT, GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {6,  19,  3,  3, 1, 0, GAMEPAD_MASK_S1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {14, 19,  3,  3, 1, 0, GAMEPAD_MASK_S1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {23, 19,  3,  3, 1, 0, GAMEPAD_MASK_A1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {31, 19,  3,  3, 1, 0, GAMEPAD_MASK_A2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {39, 19,  3,  3, 1, 0, GAMEPAD_MASK_L3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {47, 19,  3,  3, 1, 0, GAMEPAD_MASK_R3,    GP_BUTTON_ELLIPSE}},
    }},
    {BUTTON_LAYOUT_STICKLESS_13, {
        {GP_ELEMENT_DIR_BUTTON, {39, 15,  6,  6, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {18, 27,  6,  6, 1, 0, GAMEPAD_MASK_LEFT,  GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {32, 27,  6,  6, 1, 0, GAMEPAD_MASK_DOWN,  GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {44, 34,  6,  6, 1, 0, GAMEPAD_MASK_RIGHT, GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {49, 53,  6,  6, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {65, 13,  2,  2, 1, 0, GAMEPAD_MASK_L3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {72, 13,  2,  2, 1, 0, GAMEPAD_MASK_R3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {79, 13,  2,  2, 1, 0, GAMEPAD_MASK_A2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {86, 13,  2,  2, 1, 0, GAMEPAD_MASK_A1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 13,  2,  2, 1, 0, GAMEPAD_MASK_S1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {100, 13, 2,  2, 1, 0, GAMEPAD_MASK_S2,    GP_BUTTON_ELLIPSE}},
    }},
    {BUTTON_LAYOUT_STICKLESS_16, {
        {GP_ELEMENT_DIR_BUTTON, {47, 19,  4,  4, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {32, 27,  4,  4, 1, 0, GAMEPAD_MASK_LEFT,  GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {42, 27,  4,  4, 1, 0, GAMEPAD_MASK_DOWN,  GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {50, 32,  4,  4, 1, 0, GAMEPAD_MASK_RIGHT, GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {52, 47,  4,  4, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {64, 17,  4,  4, 1, 0, GAMEPAD_MASK_L3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {42, 45,  4,  4, 1, 0, GAMEPAD_MASK_L3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {66, 45,  4,  4, 1, 0, GAMEPAD_MASK_R3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {77, 15,  2,  2, 1, 0, GAMEPAD_MASK_A2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {82, 15,  2,  2, 1, 0, GAMEPAD_MASK_A1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {87, 15,  2,  2, 1, 0, GAMEPAD_MASK_S1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {92, 15,  2,  2, 1, 0, GAMEPAD_MASK_S2,    GP_BUTTON_ELLIPSE}},
    }},
    {BUTTON_LAYOUT_STICKLESS_14, {
        {GP_ELEMENT_DIR_BUTTON, {26, 20,  7,  7, 1, 0, GAMEPAD_MASK_LEFT,  GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {42, 20,  7,  7, 1, 0, GAMEPAD_MASK_DOWN,  GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {56, 28,  7,  7, 1, 0, GAMEPAD_MASK_RIGHT, GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_DIR_BUTTON, {62, 50,  7,  7, 1, 0, GAMEPAD_MASK_UP,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {10, 22,  7,  7, 1, 0, GAMEPAD_MASK_L3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {84, 50,  7,  7, 1, 0, GAMEPAD_MASK_R3,    GP_BUTTON_ELLIPSE}},
    }},
    //--------------------------------------
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_ARCADE, {
        {GP_ELEMENT_BUTTON,     {64, 28,  8,  8, 1, 0, GAMEPAD_MASK_B3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {82, 24,  8,  8, 1, 0, GAMEPAD_MASK_B4,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {100,24,  8,  8, 1, 0, GAMEPAD_MASK_R1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {118,28,  8,  8, 1, 0, GAMEPAD_MASK_L1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {59, 46,  8,  8, 1, 0, GAMEPAD_MASK_B1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {77, 42,  8,  8, 1, 0, GAMEPAD_MASK_B2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {95, 42,  8,  8, 1, 0, GAMEPAD_MASK_R2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {113,46,  8,  8, 1, 0, GAMEPAD_MASK_L2,    GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_STICKLESSB, {
        {GP_ELEMENT_BUTTON,     {57, 20,  8,  8, 1, 0, GAMEPAD_MASK_B3,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 16,  8,  8, 1, 0, GAMEPAD_MASK_B4,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 16,  8,  8, 1, 0, GAMEPAD_MASK_R1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,20,  8,  8, 1, 0, GAMEPAD_MASK_L1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {57, 38,  8,  8, 1, 0, GAMEPAD_MASK_B1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 34,  8,  8, 1, 0, GAMEPAD_MASK_B2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 34,  8,  8, 1, 0, GAMEPAD_MASK_R2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,38,  8,  8, 1, 0, GAMEPAD_MASK_L2,    GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_BUTTONS_ANGLEDB, {
        {GP_ELEMENT_BUTTON,     {69, 28, 7, 7, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {86, 24, 7, 7, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {103,24, 7, 7, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {120,28, 7, 7, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {63, 45, 7, 7, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {80, 41, 7, 7, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {97, 41, 7, 7, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {114,45, 7, 7, 1, 0, GAMEPAD_MASK_L2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_VEWLIX, {
        {GP_ELEMENT_BUTTON,     {57, 31, 8, 8, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 24, 8, 8, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 24, 8, 8, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,24, 8, 8, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {51, 49, 8, 8, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {69, 42, 8, 8, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {87, 42, 8, 8, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {105,42, 8, 8, 1, 0, GAMEPAD_MASK_L2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_VEWLIX7, {
        {GP_ELEMENT_BUTTON,     {57, 31, 8, 8, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 24, 8, 8, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 24, 8, 8, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,24, 8, 8, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {51, 49, 8, 8, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {69, 42, 8, 8, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {87, 42, 8, 8, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_CAPCOM, {
        {GP_ELEMENT_BUTTON,     {64, 28, 8, 8, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {82, 28, 8, 8, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {100,28, 8, 8, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {118,28, 8, 8, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {64, 46, 8, 8, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {82, 46, 8, 8, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {100,46, 8, 8, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {118,46, 8, 8, 1, 0, GAMEPAD_MASK_L2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_CAPCOM6, {
        {GP_ELEMENT_BUTTON,     {74, 28, 8, 8, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {92, 28, 8, 8, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {110,28, 8, 8, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {74, 46, 8, 8, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {92, 46, 8, 8, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {110,46, 8, 8, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_SEGA2P, {
        {GP_ELEMENT_BUTTON,     {57, 34, 8, 8, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 24, 8, 8, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 24, 8, 8, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,28, 8, 8, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {57, 52, 8, 8, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 42, 8, 8, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 42, 8, 8, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,46, 8, 8, 1, 0, GAMEPAD_MASK_L2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_NOIR8, {
        {GP_ELEMENT_BUTTON,     {57, 33, 8, 8, 1, 0, GAMEPAD_MASK_B3,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 24, 8, 8, 1, 0, GAMEPAD_MASK_B4,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 24, 8, 8, 1, 0, GAMEPAD_MASK_R1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,28, 8, 8, 1, 0, GAMEPAD_MASK_L1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {57, 51, 8, 8, 1, 0, GAMEPAD_MASK_B1,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {75, 42, 8, 8, 1, 0, GAMEPAD_MASK_B2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 42, 8, 8, 1, 0, GAMEPAD_MASK_R2,      GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {111,46, 8, 8, 1, 0, GAMEPAD_MASK_L2,      GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_KEYBOARDB, {
        {GP_ELEMENT_BUTTON,     {68, 28, 78, 38, 1, 0, GAMEPAD_MASK_B3,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {79, 28, 89, 38, 1, 0, GAMEPAD_MASK_B4,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {90, 28, 100, 38, 1, 0, GAMEPAD_MASK_R1,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {68, 39, 78, 49, 1, 0, GAMEPAD_MASK_B1,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {79, 39, 89, 49, 1, 0, GAMEPAD_MASK_B2,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {90, 39, 100, 49, 1, 0, GAMEPAD_MASK_R2,   GP_BUTTON_SQUARE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_DANCEPADB, {
        {GP_ELEMENT_BUTTON,     {39, 12, 54, 27, 1, 0, GAMEPAD_MASK_B2,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {39, 46, 54, 61, 1, 0, GAMEPAD_MASK_B4,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {73, 12, 88, 27, 1, 0, GAMEPAD_MASK_B1,    GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {73, 46, 88, 61, 1, 0, GAMEPAD_MASK_B3,    GP_BUTTON_SQUARE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_TWINSTICKB, {
        {GP_ELEMENT_LEVER,      {109, 37, 10, 10, 1, 0}}
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_BLANKB, {}},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_VLXB, {
        {GP_ELEMENT_BUTTON,     {50, 31, 7, 7, 1, 0, GAMEPAD_MASK_B3,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {66, 24, 7, 7, 1, 0, GAMEPAD_MASK_B4,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {82, 24, 7, 7, 1, 0, GAMEPAD_MASK_R1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {98, 24, 7, 7, 1, 0, GAMEPAD_MASK_L1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {45, 47, 7, 7, 1, 0, GAMEPAD_MASK_B1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {61, 40, 7, 7, 1, 0, GAMEPAD_MASK_B2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {77, 40, 7, 7, 1, 0, GAMEPAD_MASK_R2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {93, 40, 7, 7, 1, 0, GAMEPAD_MASK_L2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {119,33, 5, 5, 1, 0, GAMEPAD_MASK_S2,     GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_FIGHTBOARD, {
        {GP_ELEMENT_BUTTON,     {69, 27, 7, 7, 1, 0, GAMEPAD_MASK_B3,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {86, 18, 7, 7, 1, 0, GAMEPAD_MASK_B4,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {103,18, 7, 7, 1, 0, GAMEPAD_MASK_R1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {120,18, 7, 7, 1, 0, GAMEPAD_MASK_L1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {69, 43, 7, 7, 1, 0, GAMEPAD_MASK_B1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {86, 35, 7, 7, 1, 0, GAMEPAD_MASK_B2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {103,35, 7, 7, 1, 0, GAMEPAD_MASK_R2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {120,35, 7, 7, 1, 0, GAMEPAD_MASK_L2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {84, 47, 3, 3, 1, 0, GAMEPAD_MASK_L3,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {94, 47, 3, 3, 1, 0, GAMEPAD_MASK_S1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {103,47, 3, 3, 1, 0, GAMEPAD_MASK_A1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {112,47, 3, 3, 1, 0, GAMEPAD_MASK_S2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {122,47, 3, 3, 1, 0, GAMEPAD_MASK_R3,     GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_FIGHTBOARD_STICK_MIRRORED, {
        {GP_ELEMENT_LEVER,      {99, 31, 10, 10, 1, 0, 0}}
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_CUSTOMB, {{GP_ELEMENT_RIGHT_LAYOUT}}},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_KEYBOARD8B, {
        {GP_ELEMENT_BUTTON,     {68, 28, 78, 38, 1, 0, GAMEPAD_MASK_B3,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {79, 25, 89, 35, 1, 0, GAMEPAD_MASK_B4,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {90, 25, 100, 35, 1, 0, GAMEPAD_MASK_R1,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {101,28, 111, 38, 1, 0, GAMEPAD_MASK_L1,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {68, 39, 78, 49, 1, 0, GAMEPAD_MASK_B1,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {79, 36, 89, 46, 1, 0, GAMEPAD_MASK_B2,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {90, 36, 100, 46, 1, 0, GAMEPAD_MASK_R2,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {101,39, 111, 49, 1, 0, GAMEPAD_MASK_L2,  GP_BUTTON_SQUARE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_OPENCORE0WASDB, {
        {GP_ELEMENT_BUTTON,     {68, 28, 78, 38, 1, 0, GAMEPAD_MASK_B3,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {79, 25, 89, 35, 1, 0, GAMEPAD_MASK_B4,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {90, 25, 100, 35, 1, 0, GAMEPAD_MASK_R1,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {101,28, 111, 38, 1, 0, GAMEPAD_MASK_L1,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {68, 39, 78, 49, 1, 0, GAMEPAD_MASK_B1,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {79, 36, 89, 46, 1, 0, GAMEPAD_MASK_B2,   GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {90, 36, 100, 46, 1, 0, GAMEPAD_MASK_R2,  GP_BUTTON_SQUARE}},
        {GP_ELEMENT_BUTTON,     {101,39, 111, 49, 1, 0, GAMEPAD_MASK_L2,  GP_BUTTON_SQUARE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_STICKLESS_13B, {
        {GP_ELEMENT_BUTTON,     {56, 27, 6, 6, 1, 0, GAMEPAD_MASK_B3,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {70, 24, 6, 6, 1, 0, GAMEPAD_MASK_B4,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {84, 24, 6, 6, 1, 0, GAMEPAD_MASK_R1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {98, 27, 6, 6, 1, 0, GAMEPAD_MASK_L1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {56, 41, 6, 6, 1, 0, GAMEPAD_MASK_B1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {70, 38, 6, 6, 1, 0, GAMEPAD_MASK_B2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {84, 38, 6, 6, 1, 0, GAMEPAD_MASK_R2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {98, 41, 6, 6, 1, 0, GAMEPAD_MASK_L2,     GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_STICKLESS_16B, {
        {GP_ELEMENT_BUTTON,     {59, 27, 4, 4, 1, 0, GAMEPAD_MASK_B3,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {69, 25, 4, 4, 1, 0, GAMEPAD_MASK_B4,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {79, 25, 4, 4, 1, 0, GAMEPAD_MASK_R1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {89, 27, 4, 4, 1, 0, GAMEPAD_MASK_L1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {59, 37, 4, 4, 1, 0, GAMEPAD_MASK_B1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {69, 35, 4, 4, 1, 0, GAMEPAD_MASK_B2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {79, 35, 4, 4, 1, 0, GAMEPAD_MASK_R2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {89, 37, 4, 4, 1, 0, GAMEPAD_MASK_L2,     GP_BUTTON_ELLIPSE}},
    }},
    {_ButtonLayout_ARRAYSIZE+BUTTON_LAYOUT_STICKLESS_14B, {
        {GP_ELEMENT_BUTTON,     {70, 20, 7, 7, 1, 0, GAMEPAD_MASK_B3,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {86, 16, 7, 7, 1, 0, GAMEPAD_MASK_B4,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {102, 16, 7, 7, 1, 0, GAMEPAD_MASK_R1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {118, 20, 7, 7, 1, 0, GAMEPAD_MASK_L1,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {70, 36, 7, 7, 1, 0, GAMEPAD_MASK_B1,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {86, 32, 7, 7, 1, 0, GAMEPAD_MASK_B2,     GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {102, 32, 7, 7, 1, 0, GAMEPAD_MASK_R2,    GP_BUTTON_ELLIPSE}},
        {GP_ELEMENT_BUTTON,     {118, 36, 7, 7, 1, 0, GAMEPAD_MASK_L2,    GP_BUTTON_ELLIPSE}},
    }},
};

#endif